# lanner

./: .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-06-28-per-output-overlays.md
docs/superpowers/specs/: 2026-06-28-multi-monitor-design.md  2026-06-28-per-output-overlays-design.md
src/: app.rs  audio.rs  controls.rs  lockfile.rs  main.rs  overlay.rs  recorder.rs  transcode.rs  window.rs
